fix bug with navbar on mobile devices

--- a/assets/css/patients.css
+++ b/assets/css/patients.css
@@ -81,6 +81,7 @@ body {
   position: sticky !important;
   position: -webkit-sticky !important;
   top: 0 !important;
+  z-index: 9999 !important;
 }
 
 /* Ticker */
